# time-dependent-guidance

./: .gitignore  experiment_planner.py  guidance_registry.py  pyproject.toml  results - Copy.ipynb  results.ipynb
experiments/artifacts/EXP_B_EXTREME_TRADEOFF/: EXP_B_EXTREME_TRADEOFF_plan.csv  results.jsonl
experiments/artifacts/EXP_C_EXTREME_TRADEOFF_COLORS/: results.jsonl
experiments/artifacts/EXP_C_EXTREME_TRADEOFF_COLORS_plan/: EXP_C_EXTREME_TRADEOFF_COLORS_plan.csv  results.jsonl
experiments/artifacts/EXP_D_EXTREME_TRADEOFF_OOD_SPATIAL/: EXP_D_EXTREME_TRADEOFF_OOD_SPATIAL_plan.csv  results.jsonl
experiments/experiment_visualization/: visualize_results_grids.ipynb  viz_grids.py
experiments/runner/: experiment_runner.ipynb
experiments/viz/: visualize_results_grids.ipynb  viz_grids.py  viz_grids_avish.py
grids_to_present/Color_grids/: Color Car Results Analysis 1337.txt  Color Car Results Analysis 42.txt  Color Mug Results Analysis 1337.txt  Color Mug results analysis 42.txt  Color hat results analysis 1337.txt  Hat-Jacket results analysis 42.txt
grids_to_present/Numeric_grids/: Numeric seed 42 Results Analysis.txt  numeric resulta analysis seed 1337.txt
grids_to_present/Spatial_grids/: Spatial Car Roof analysis 1337.txt  Spatial Car Roof analysis 42.txt  Spatial Chair table analysis 1337.txt  Spatial Chair table analysis 42.txt  Spatial couch ceiling analysis 1337.txt  Spatial couch ceiling analysis 42.txt
